--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,16 @@
 /node_modules
 /dist
+
+# Environment variables
+.env
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
+
+# Logs
+logs
+*.log
+*.log.*
+*.log.*.*
+.DS_Store
